# skeleton-django-vue-parceljs

./: .env.example  .gitignore  README.md  django-vue-parceljs.code-workspace  manage.py  pyproject.toml  skeleton.code-workspace
apps/users/: apps.py  signals.py  urls.py
apps/users/templates/users/: login.html
assets/vue/: main.css  main.css.map  main.js  main.js.map
config/: asgi.py  generic_views.py  project.py  settings.py  test.py  urls.py  wsgi.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: Hello.vue
notebooks/: debugging.ipynb
templates/: application.html  base.html
utils/: activate.ps1  notebook.ps1
